<resources>
    <string name="application_name">Delivery Operator App</string>

    <!-- Login -->
    <string name="login_label">Login</string>
    <string name="username">Username</string>
    <string name="username_error">Enter a valid username</string>
    <string name="password">Password</string>
    <string name="password_error">Between 6 and 10 alphanumeric characters</string>
    <string name="login">Login</string>

    <!-- Order list -->
    <string name="order_num">Order #%1$d</string>
    <string name="accepted_orders_label">Accepted orders</string>
    <string name="new_orders_label">New orders</string>

    <!-- Order info -->
    <string name="select_order">Select order</string>
    <string name="phone_image_description">Phone icon</string>
    <string name="call_label">Call</string>
    <string name="assignment_image_description">Assignment icon</string>
    <string name="assignment_label">Sign</string>
    <string name="navigation_icon_description">Navigation icon</string>
    <string name="navigation_label">Navigate</string>
    <string name="time_left_label">Time left: %1$s</string>
    <string name="dimensions_text">Dimensions: %1$d x %2$d x %3$d (sm)</string>
    <string name="weight_label">Weight: %1$d kg</string>
    <string name="sender_notes_label">Sender notes: %1$s</string>
    <string name="ttl_ended">Time ended.</string>
    <string name="ttl_minutes">%1$s minutes</string>
    <string name="ttl_hours">%1$s hours</string>
    <string name="ttl_days">%1$s days</string>

    <!-- Receiver info -->
    <string name="accept_label">Accept</string>
    <string name="decline_label">Decline</string>
    <string name="dialog_title">Are you sure?</string>

    <!-- Map -->
    <string name="start_navigation">Start navigation</string>
    <string name="order_title_from">From</string>
    <string name="order_title_transit">Transit</string>
    <string name="order_title_end">End</string>
    <string name="order_from_description_snippet">Sender name: %1$s\nSender Surname: %2$s\nPhone number: %3$s\nExpected TTD: %4$s</string>
    <string name="order_to_description_snippet">Receiver name: %1$s\nReceiver Surname: %2$s\nPhone number: %3$s\nExpected TTD: %4$s</string>
    <string name="no_order_selected">No order selected, please select the order to show it on the map.</string>


    <!-- Navigation -->
    <string name="map_dialog_transit_text">
        You have been arrived to the transit point.
        \n Do you want to continue the navigation?</string>
    <string name="map_dialog_positive_text">Continue</string>
    <string name="map_dialog_negative_text">Stop</string>
    <string name="on_failed_reroute">Failed to reroute</string>
    <string name="map_dialog_end_text">
        You have been arrived to the destination.
        \n Do you want to go to the order page?</string>

    <!-- Bottom Navigation -->
    <string name="map_label">Map</string>
    <string name="orders_label">Orders</string>
    <string name="settings_label">Settings</string>

    <!-- Mapbox  FIXME: Move the access token to the more secure place -->
    <string name="access_token" translatable="false">pk.eyJ1Ijoia3p2ZGFyNDIiLCJhIjoiY2ptc2dyeHQwMGZjNTNxcDh0eDh6MXNyOCJ9.n4F86lJ4nVAesqi6OLtbUQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions for navigation.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- Settings -->
    <string name="localization">Localization</string>
    <string name="contact_co">Contact CO</string>
    <string name="log_out">Log out</string>

    <!-- Languages -->
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>

    <!-- Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Others -->
    <string name="empty_description" translatable="false">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>

</resources>
