<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activity.LoginActivity">

    <include layout="@layout/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.CardViewStyle"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutUsername"
                android:paddingTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/login" />


</merge>