<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReceiverInfoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- Base content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Name Surname" />

            <TextView
                android:id="@+id/time_left_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:text="Time left: 10 hours" />

            <TextView
                android:id="@+id/dimensions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="Dimentions: 20x40x60 (sm)" />

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="Weight: 1 kg" />

            <TextView
                android:id="@+id/sender_notes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="@string/empty_description" />
        </LinearLayout>
    </ScrollView>

    <!-- Confirmation dialog -->
    <include
        layout="@layout/alert_dialog"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Buttons -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/decline"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/decline_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/accept_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>